testdata/language-features/guard/guard05.reject.out
type error: can not unify
[32m'Bool[m
with
[32m'Tuple0[m

in testdata/language-features/guard/guard05.reject.lc:1:9:
value | () = "wrong"
        ^^
